<resources>
    <string name="app_name">MaKore</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="contacts_fragment_label">Contacts list</string>
    <string name="chat_fragment_label">Chat</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_contacts_fragment">Contacts list..</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="displayName">Display name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="sign_in_button_txt">Sign In</string>
    <string name="sign_in_page_title">Sign In</string>
    <string name="sign_up_button_txt">Sign Up</string>
    <string name="sign_up_page_title">Sign Up</string>
    <string name="sign_up_attach_profile_picture_btn">Profile picture</string>
    <string name="sign_up_prompt_to_sign_in">Have an account already?</string>
    <string name="sign_up_link_to_sign_in">Sign in</string>
    <string name="sign_in_prompt_to_sign_up">Don\'t have an account?</string>
    <string name="sign_in_link_to_sign_up">Sign up</string>
    <!-- Preference Titles -->
    <string name="settings_messages_header">Messages</string>
    <string name="settings_theme_header">Theme</string>

    <!-- Messages Preferences -->
    <string name="settings_server_title">Your server</string>

    <!-- Theme Preferences -->
    <string name="settings_dark_mode_title">Dark mode</string>
    <string name="settings_dark_mode_summary">Use dark mode</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Add Contact Page -->
    <string name="add_contact_page_title">Add Contact</string>
    <string name="add_contact_page_button_txt">Add</string>
    <string name="server">Server</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="cV_description_profile_picture">Profile picture</string>
    <string name="description_send_message_button">Send message button</string>
    <string name="type_a_message">Type a message…</string>
    <string name="default_server_address">10.0.2.2:54321</string>
    <string name="connection_error">Error connecting to server</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="app_toolbar_logo_description">App toolbar logo</string>
</resources>